# yata-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: auth.py  bodyweight.py  config.py  db.py  deps.py  exercises.py  health.py  main.py  models.py  schemas.py  security.py
app/core/: __init__.py  errors.py  security.py
app/db/: __init__.py  base.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  bodyweight.py  exercise.py  user.py
app/repositories/: __init__.py  user_repository.py
app/routers/: auth.py  health.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: auth_service.py
infra/: Caddyfile
infra/terraform/: backend.tf  budget.tf  ec2.tf  ecr.tf  iam_oicd.tf  network.tf  outputs.tf  providers.tf  ssm.tf  variables.tf
migrations/: env.py
migrations/versions/: 20260614_0001_create_users_and_profiles.py  20260617_0002_athlete_model_revision.py  20260618_0003_exercises_and_bodyweight.py  20260619_0005_fold_athlete_into_users.py  20260621_0006_enable_pgvector.py
tests/: conftest.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_bodyweight.py  test_exercises.py  test_health.py  test_me.py  test_rbac.py  test_security.py  test_token_claims.py
